# DeepWire-DPI-Smart-Network-Traffic-Analyser

./: .gitignore  Readme.md
.github/workflows/: ci.yml
contracts/: flow_event.json
control-plane/: go.mod  main.go  main_test.go
control-plane/rules/: README.md  blocklist.txt
docker/: docker-compose.monitoring.yml
docker/grafana/provisioning/datasources/: datasource.yml
docker/prometheus/: prometheus.yml
docs/: engine_onboarding_guide.md
engine/: CMakeLists.txt  test_basic  test_inspec  test_tls_sni_basic
engine/.cache/clangd/index/: flow_data.h.A8A0AA6AAC80E549.idx  flow_state_logic.h.A518F44D267BE37F.idx  json_serializer.h.0A4B06B21D9E14EF.idx  main.cpp.42ECF9742AAA5D45.idx  main.cpp.6148E6E81A3EDD9C.idx  main.cpp.83D35C5328BF0B82.idx  main.cpp.B271DA4A67CB3D5C.idx  parser_utils.h.3D77FF46BB17D2F8.idx  test_flow_state.cpp.079941A055DEC3FC.idx  test_ingress_handler.cpp.C13B1E02A9821AED.idx  test_ipc_bridge.cpp.FED1934C1CE14AC2.idx  test_protocol_inspec.cpp.A1AED96EDE063D0B.idx  test_tls_sni_basic.cpp.6566479C4B6B6047.idx  tls_sni_parser.h.325A6071E0109029.idx
engine/src/: CMakeLists.txt
engine/src/common/: flow_data.h
engine/src/flow_state/: flow_state_logic.h  main.cpp
engine/src/ingress_handler/: main  main.cpp  parser_utils.h
engine/src/ipc_bridge/: json_serializer.h  main.cpp
engine/src/protocol_inspec/: main.cpp  tls_sni_parser.h
engine/tests/: test_flow_state.cpp  test_ingress_handler.cpp  test_ipc_bridge.cpp  test_protocol_inspec.cpp  test_session_table.cpp  test_tls_sni_basic.cpp
